# stremio

./: .gitignore  casawytub.spec  install.ps1  install.sh  package.json  pyproject.toml  streeio.spec  version.json
build_tmp/casawytub/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  xref-casawytub.html
build_tmp/streeio/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-streeio.txt  xref-streeio.html
casawytub/: __init__.py  __main__.py  cli.py
streeio/: __init__.py  __main__.py  cli.py
